--- a/public/assets/css/step_sequencer.css
+++ b/public/assets/css/step_sequencer.css
@@ -53,3 +53,11 @@
 .start-button.dokidoki {
   background: rgb(248, 103, 131);
 }
+
+.start-button.free {
+  background: rgb(71, 209, 222);
+}
+
+.start-button.hxh {
+  background: rgb(81, 145, 78);
+}
